Varios cambios. en comentario, agregado share things en el master en derecho y algunas otras cuestiones

--- a/public/assets-lpe/css/lpe.css
+++ b/public/assets-lpe/css/lpe.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
- * Bootstrap v3.3.6 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
+ * Bootstrap v3.3.7 (http://getbootstrap.com)
+ * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
@@ -1750,7 +1750,6 @@ a:hover, a:focus {
 }
 /* line 58, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss */
 a:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -3804,7 +3803,6 @@ select[size] {
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -4442,7 +4440,6 @@ select[multiple].input-lg,
 }
 /* line 26, ../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss */
 .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -10044,13 +10041,14 @@ textarea.form-control.input-lg,
 
 /* line 288, ../scss/lpe.scss */
 #crearDerecho .titulo-derecho-background {
+  background-position: center center;
   margin-bottom: 40px;
 }
-/* line 290, ../scss/lpe.scss */
+/* line 291, ../scss/lpe.scss */
 #crearDerecho .titulo-derecho-background .overlay {
-  padding: 30px 0;
+  padding: 80px 0;
 }
-/* line 294, ../scss/lpe.scss */
+/* line 295, ../scss/lpe.scss */
 #crearDerecho .titulo-derecho-background textarea {
   color: #FFF;
   background-color: none;
@@ -10062,19 +10060,19 @@ textarea.form-control.input-lg,
   resize: none;
   margin: 23px 0 11.5px;
 }
-/* line 306, ../scss/lpe.scss */
+/* line 307, ../scss/lpe.scss */
 #crearDerecho textarea.accion {
   font-size: 19.5px;
   line-height: 27.3px;
   font-weight: 300;
   padding: 0 0 10px;
 }
-/* line 312, ../scss/lpe.scss */
+/* line 313, ../scss/lpe.scss */
 #crearDerecho .btn-file {
   position: relative;
   overflow: hidden;
 }
-/* line 316, ../scss/lpe.scss */
+/* line 317, ../scss/lpe.scss */
 #crearDerecho .btn-file input[type=file] {
   position: absolute;
   top: 0;
@@ -10091,111 +10089,112 @@ textarea.form-control.input-lg,
   display: block;
 }
 
-/* line 335, ../scss/lpe.scss */
+/* line 336, ../scss/lpe.scss */
 article .titulo-derecho-background {
   color: #cdbfe3;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 40px;
   background-size: cover;
+  background-position: center center;
 }
-/* line 341, ../scss/lpe.scss */
+/* line 343, ../scss/lpe.scss */
 article .titulo-derecho-background h1 {
   color: #FFF;
 }
-/* line 342, ../scss/lpe.scss */
+/* line 344, ../scss/lpe.scss */
 article .titulo-derecho-background .overlay {
   background: rgba(0, 0, 0, 0.3);
-  padding: 30px 0;
+  padding: 80px 0;
 }
-/* line 347, ../scss/lpe.scss */
+/* line 349, ../scss/lpe.scss */
 article #derecho #descripcion {
   font-size: 14px;
   line-height: 21px;
 }
-/* line 351, ../scss/lpe.scss */
+/* line 353, ../scss/lpe.scss */
 article span.badge {
   background-color: #2196F3;
 }
-/* line 354, ../scss/lpe.scss */
+/* line 356, ../scss/lpe.scss */
 article #nav-derechos.affix {
   top: 30px;
 }
-/* line 358, ../scss/lpe.scss */
+/* line 360, ../scss/lpe.scss */
 article #nav-derechos > a {
   padding: 10px;
 }
-/* line 361, ../scss/lpe.scss */
+/* line 363, ../scss/lpe.scss */
 article p {
   font-size: 14px;
   line-height: 21px;
 }
-/* line 365, ../scss/lpe.scss */
+/* line 367, ../scss/lpe.scss */
 article img.size32 {
   width: 32px;
 }
-/* line 368, ../scss/lpe.scss */
+/* line 370, ../scss/lpe.scss */
 article p.comentario {
   font-size: 12px;
   line-height: 1.5;
 }
-/* line 372, ../scss/lpe.scss */
+/* line 374, ../scss/lpe.scss */
 article textarea.comentario {
   resize: vertical;
 }
 
-/* line 412, ../scss/lpe.scss */
+/* line 414, ../scss/lpe.scss */
 .tag-opinion {
   padding: 0;
   text-align: center;
 }
-/* line 415, ../scss/lpe.scss */
+/* line 417, ../scss/lpe.scss */
 .tag-opinion img {
   left: 0;
 }
-/* line 419, ../scss/lpe.scss */
+/* line 421, ../scss/lpe.scss */
 .tag-opinion .overlay {
   background: rgba(0, 0, 0, 0.2);
   padding: 15px;
 }
-/* line 423, ../scss/lpe.scss */
+/* line 425, ../scss/lpe.scss */
 .tag-opinion h5 {
   color: #FFF;
 }
-/* line 426, ../scss/lpe.scss */
+/* line 428, ../scss/lpe.scss */
 .tag-opinion a:hover {
   text-decoration: none;
 }
 
-/* line 434, ../scss/lpe.scss */
+/* line 436, ../scss/lpe.scss */
 .opinionModal .descripcion {
   font-size: 14px;
   line-height: 21px;
 }
 
-/* line 442, ../scss/lpe.scss */
+/* line 444, ../scss/lpe.scss */
 .header-opinion {
   border-radius: 5px;
   background-size: cover;
   margin-bottom: 20px;
 }
-/* line 446, ../scss/lpe.scss */
+/* line 448, ../scss/lpe.scss */
 .header-opinion .overlay {
   background: rgba(0, 0, 0, 0.4);
   padding: 40px 0 55px;
   border-radius: 5px;
 }
-/* line 451, ../scss/lpe.scss */
+/* line 453, ../scss/lpe.scss */
 .header-opinion h3 {
   color: #FFF;
 }
 
-/* line 459, ../scss/lpe.scss */
+/* line 461, ../scss/lpe.scss */
 .editor-area {
   font-size: 14px;
 }
 
-/* line 464, ../scss/lpe.scss */
+/* line 466, ../scss/lpe.scss */
 #modificarInicio textarea[name=titulo] {
   font-size: 56px;
   font-weight: 700;
@@ -10206,7 +10205,7 @@ article textarea.comentario {
   margin-bottom: 15px;
   color: #444;
 }
-/* line 474, ../scss/lpe.scss */
+/* line 476, ../scss/lpe.scss */
 #modificarInicio textarea[name=descripcion] {
   font-size: 19.5px;
   line-height: 27.3px;
@@ -10216,7 +10215,7 @@ article textarea.comentario {
   resize: none;
 }
 
-/* line 485, ../scss/lpe.scss */
+/* line 487, ../scss/lpe.scss */
 #myCarousel .conoce {
   color: #FFF;
   padding-top: 20px;
@@ -10224,12 +10223,12 @@ article textarea.comentario {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 497, ../scss/lpe.scss */
+/* line 499, ../scss/lpe.scss */
 .twitter-typeahead {
   width: 100%;
 }
 
-/* line 507, ../scss/lpe.scss */
+/* line 509, ../scss/lpe.scss */
 .bgcolor0 {
   background-color: #6f5499;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#3f3057, to(#6f5499)));
@@ -10240,7 +10239,7 @@ article textarea.comentario {
   background-repeat: repeat-x;
 }
 
-/* line 516, ../scss/lpe.scss */
+/* line 518, ../scss/lpe.scss */
 .bgcolor1 {
   background-color: #00a73d;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#004118, to(#00a73d)));
@@ -10251,7 +10250,7 @@ article textarea.comentario {
   background-repeat: repeat-x;
 }
 
-/* line 525, ../scss/lpe.scss */
+/* line 527, ../scss/lpe.scss */
 .bgcolor2 {
   background-color: #00cbdc;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#006d76, to(#00cbdc)));
@@ -10262,7 +10261,7 @@ article textarea.comentario {
   background-repeat: repeat-x;
 }
 
-/* line 534, ../scss/lpe.scss */
+/* line 536, ../scss/lpe.scss */
 .bgcolor3 {
   background-color: #ff5400;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#993200, to(#ff5400)));
