--- a/views/lpe/contenido/derecho/comentarioModal.twig
+++ b/views/lpe/contenido/derecho/comentarioModal.twig
@@ -6,8 +6,8 @@
                 <h4 class="modal-title">Comentarios</h4>
             </div>
             <div class="modal-body">
-                {% if user is not null %}
                 <div class="well">
+                {% if user is not null %}
                     <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'seccion' , 'idRaiz': seccion.id}) }}" method="POST">
                         <div class="form-group" style="margin-bottom:0">
                             <label class="col-xs-1 col-sm-offset-1 text-center"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="margin:0 auto 5px" alt=""></label>
@@ -21,8 +21,10 @@
                             </div>
                         </div>
                     </form>
+                    {% else %}
+            <a href="{{urlFor('shwLogin')}}" class="btn btn-sm btn-primary btn-block"> Para comentar y participar, Inicié Sesión</a>
+             {% endif %}
                 </div>
-                {% endif %}
                 <div class="lista-comentarios">
                     {% for comentario in seccion.comentarios %} {% include 'lpe/contenido/derecho/comentario.twig' %} {% endfor %}
                 </div>
