--- a/views/lpe/contenido/opinion/editar.twig
+++ b/views/lpe/contenido/opinion/editar.twig
@@ -21,38 +21,21 @@
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
             <h5>La opinion de...</h5>
             <!--<input type="text" class="form-control input-lg" style="text-align: center" placeholder="¿De quien es?">-->
-            <select name="participante" class="form-control">
-                <option value="" disabled selected>Seleccione un participante</option>            
-                {% for participante in participantes %}
-                <option value="{{participante.id}}">{{participante.nombre}}</option>
-                {% endfor %}
-            </select>
+            <input type="text" class="form-control" value="{{participante.nombre}}" readonly>
             <div class="form-group">
             <h5>Dicho en...</h5>
-                <select name="evento" class="form-control">
-                <option value="" disabled selected>Seleccione el evento</option>     
-                {% for evento in eventos %}
-                {% if evento.finalizado %}
-                <option value="{{evento.id}}">{{evento.titulo}}</option>
-                {% endif %}
-                {% endfor %}
-            </select>
+                <input type="text" class="form-control" value="{{evento.titulo}}" readonly>
             </div>
             <div class="form-group">
             <h5>Acerca de..</h5>
-            <select name="derecho" class="form-control">
-                <option value="" disabled selected>Seleccione el derecho</option>     
-                {% for derecho in derechos %}
-                <option value="{{derecho.id}}">{{ derecho.titulo }}</option>
-                {% endfor %}
-            </select>
+            <input type="text" class="form-control" value="{{derecho.titulo}}" readonly>
             </div>
             <hr>
-            <textarea name="cuerpo">Escriba la opinion</textarea>
+            <textarea name="cuerpo"></textarea>
             <hr>
             <div class="clearfix">
                 <a href="#" class="pull-left btn btn-link">Cancelar</a>
-                <button type=submit class="pull-right btn btn-primary">Crear opinion</button>
+                <button type=submit class="pull-right btn btn-primary">Editar opinion</button>
             </div>
         </div>
 
@@ -65,12 +48,7 @@
 <script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
 <script>
     $(document).ready(function() {
-    iniciarEditor('cuerpo');
-
-    });
-
-    var iniciarEditor = function(nombre) {
-        $("textarea[name='" + nombre + "']").sceditor({
+    $("textarea[name='cuerpo']").sceditor({
             plugins: "bbcode",
             emoticonsEnabled: false,
             toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
@@ -80,7 +58,7 @@
             resizeEnabled: false,
             resizeHeight: true,
             autoExpand: true    
-        });
-    }
+        }).val('{{ opinion.cuerpo|bbCode }}', false);
+    });
 
 </script> {% endblock %}
