--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -1,8 +1,22 @@
-{% extends "lpe/master.twig" %} {% block linkhead %} {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}{{ derecho.titulo }}{% endblock %} {% block body %}
+{% set linkImagen = baseUrl() ~ '/img/derecho/' ~ derecho.id ~ '.jpg' %}
+
+{% extends "lpe/master.twig" %} 
+
+{% set share_link = derecho.link %}
+{% set twitter_txt = 'Lee mas acerca del ' ~ derecho.titulo|lower  %}
+
+{% block opengraph %}
+<meta property="og:url"                content="{{ baseUrl() }}/derecho/{{derecho.id}}" />
+<meta property="og:type"               content="article" />
+<meta property="og:title"              content="{{ derecho.titulo}} - Nueva Ley Provincial de Educación" />
+<meta property="og:description"        content="{{ derecho.descripcion|bbCode|slice(0,180)|replace({'<br>': " ", '<b>': "",'</b>': "",'<i>': "",'</i>': "",'<u>': "",'</u>': ""}) }} ... [Leer Mas]" />
+<meta property="og:image"              content="{{linkImagen}}" />
+<meta property="og:video"              content="https://www.youtube.com/watch?v={{derecho.video}}" />
+    {% endblock %}
+{% block linkhead %} {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}{{ derecho.titulo }}{% endblock %} {% block body %}
 <article>
 {% set colorSeleccionado = random(3) %}
 {% if derecho.imagen == 1 %}
-{% set linkImagen = baseUrl() ~ '/img/derecho/' ~ derecho.id ~ '.jpg' %}
 {% endif %}
     <div class="titulo-derecho-background bgcolor{{colorSeleccionado}}" style="{{ derecho.imagen == 1 ? 'background-image: url(' ~ linkImagen ~ ')':''}}">
         <div class="overlay">
@@ -20,6 +34,7 @@
         <div class="row">
             <div id="derecho" class="col-xs-12 col-sm-12 col-md-8 text-justify">
                 <div id="descripcion">
+                    
                     <p>{{ derecho.descripcion|bbCode }}</p>
                 </div>
                 {% for seccion in derecho.secciones %}
@@ -29,13 +44,13 @@
                         <!--<h5>&nbsp;{{seccion.votos_alta}}/{{seccion.votos_media}}/{{seccion.votos_baja}}<i class="zmdi zmdi zmdi-chart zmdi-hc-fw zmdi-hc-lg"></i></h5>-->
                         <!--<h5 class="text-success">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></h5>-->
                         <div class="btn-group-vertical btn-group-sm">
-                            <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Urgente</a>
-                            <a href="javascript:votarSeccion({{seccion.id}},2)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Importante</a>
-                            <a href="javascript:votarSeccion({{seccion.id}},1)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Poco importante</a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',3)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Urgente</a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',2)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Importante</a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',1)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Poco importante</a>
                             <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info">{{ seccion.comentarios|length }} <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i></a>
                         </div>
                     </div>
-                    <p class="lead"><span class="text-success">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>{{seccion.descripcion|nl2br}}</p>
+                    <p class="lead"><span class="badge">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>&nbsp;&nbsp;{{seccion.descripcion|nl2br}}</p>
                     <!--<h6><b>Importancia de la acción</b></h6>
                     <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
                         <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
@@ -52,7 +67,13 @@
                 <div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px;">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{derecho.video}}" frameborder="0" allowfullscreen></iframe>
                 </div>
-                {% endif %} {% for opinion in derecho.opiniones %}
+                {% endif %} 
+                <div class="btn-group btn-group-justified" style="margin-bottom:25px;">
+                    <a href="https://www.facebook.com/sharer.php?u={{ share_link }}" target="_blank" class="btn btn-default" style="background-color:#3b5998; color:#FFF"><i class="zmdi zmdi-facebook zmdi-hc-2x"></i></a>
+                    <a href="https://twitter.com/share?text={{ twitter_txt }}&url={{ share_link }}&hashtags=nlpe" target="_blank" class="btn btn-default" style="background-color:#55acee; color:#FFF"><i class="zmdi zmdi-twitter zmdi-hc-2x"></i></a>
+                    <a href="https://plus.google.com/share?url={{ share_link }}" target="_blank" class="btn btn-default" style="background-color:#dd4b39; color:#FFF"><i class="zmdi zmdi-google-plus zmdi-hc-2x"></i></a>
+                </div>
+                {% for opinion in derecho.opiniones %}
                 <div class="panel">
                     <div class="panel-body tag-opinion bgcolor{{colorSeleccionado}}">
                         <a href="javascript:void(0)" data-toggle="modal" data-target="#opinion{{loop.index}}">
