--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-3">
-                    <h4 class="conoce text-center"><strong>Conoce mas</strong></h4>
+                    <h4 class="conoce text-center"><strong>Conocé mas</strong></h4>
             <div class="" style=" background-size:cover;">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
                     <!-- Wrapper for slides -->
@@ -105,7 +105,7 @@
                     {% endfor %}
                 {% else %}
                 <li class="list-group-item">
-                    <h5 class="list-group-item-heading">No hay eventos proximos</h5>
+                    <h5 class="list-group-item-heading">No hay eventos próximos</h5>
                 </li>
                 {% endif %}
             </div>
