--- a/views/lpe/test.twig
+++ b/views/lpe/test.twig
@@ -1,130 +1,143 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
-<div class="container" style=" ">
-    <div class="row">
-        {% set paginaAdmin = 4 %} {% include '/lpe/admin/listaSecciones.twig' %}
-        <div class="col-xs-12 col-sm-9">
-            <div class="text-center">
-                <h2 class="text-center"><strong>Imagenes</strong>
-        </h2>
-                <br>
+{% extends "lpe/master.twig" %} {% block linkhead %}
+<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} 
+{# ----------------------------------------------------------- #} {% block titulo %}Editar derecho{% endblock
+%} {% block body %}
+<form id="crearDerecho" action="{# urlFor('runModifDerecho') #}" method="POST" enctype="multipart/form-data">
+    <div class="titulo-derecho-background bgcolor{{random(3)}}">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <textarea name="titulo" class="form-control" rows="1" placeholder="Escriba el título"></textarea>
+                    </div>
+                </div>
             </div>
-            <div class="list-group">
-                <li class="list-group-item">
-                    <form action="#" method="POST">
-                        <div class="form-group">
-                            <label class="control-label"><strong>Nueva Imagen</strong></label><br>
-                            <div class="input-group">
-                                <label class="input-group-btn">
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div id="derecho" class="col-xs-12 col-sm-12 col-md-8 text-justify">
+                <div id="descripcion">
+                    <textarea name="descripcion"></textarea>
+                </div>
+                <hr>
+                <div class="lista-acciones">                   
+                    {% for seccion in derecho.secciones %}
+                    <div class="accion-container">
+                        <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion...">{{seccion.descripcion|nl2br}}</textarea>
+                        <br>
+                    </div>
+                    {% endfor %}
+                </div>
+                <hr>
+                
+                <div class="clearfix hidden-sm hidden-xs">
+                    <a href="#" class="btn btn-large btn-default ">Cancelar</a>
+                    <button type="submit" class="btn btn-lg btn-primary pull-right">Modificar derecho</button>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4">
+                <div id="youtubeVideo" class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px;">
+                    <iframe class="embed-responsive-item" id="youtubeVideo" src="https://www.youtube.com/embed/7uulVAHwXi0" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Imagen de Cabecera</label><br>
+                    <div class="input-group">
+                        <label class="input-group-btn">
                     <span class="btn btn-primary">
                         Explorar <input name="archivo" type="file" style="display: none;">
                     </span>
                 </label>
-                                <input type="text" class="form-control" readonly style="padding-left:10px">
-                            </div>
-                        </div>
-                        <div class="form-group text-right">
-                            <button type="submit" class="btn btn-success">Subir imagen</button>
-                        </div>
-                    </form>
-                </li>
-                <li class="list-group-item">
-                    <div class="clearfix">
-                        <div class="pull-right text-center">
-                            <form action="" method="POST">
-                                <input type="hidden" name="id" value="{{moderador.id}}">
-                                <a href="#" class="btn btn-success" onclick="copyToClipboard('https://unsplash.it/200/200/?random={{ random(1000) }}')"><i class="zmdi zmdi-copy"></i></a>
-                                <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
-                            </form>
-                        </div>
-                        <div class="pull-left">
-                            <img src="https://unsplash.it/350/200/?random={{ random(1000) }}')" class="img-thumbnail" style="height:100px">
-                        </div>
-                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i> imagen.png</strong></h4>
-                        <h6>&nbsp;&nbsp;&nbsp;https://unsplash.it/200/200/?random={{ random(1000) }}</h6>
+                        <input type="text" class="form-control" readonly style="padding-left:10px">
                     </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="clearfix">
-                        <div class="pull-right text-center">
-                            <form action="{{ urlFor('runCrearImagen') }}" method="POST">
-                                <input type="hidden" name="id" value="{{moderador.id}}">
-                                <a href="#" class="btn btn-success" onclick="copyToClipboard('https://unsplash.it/200/200/?random={{ random(1000) }}')"><i class="zmdi zmdi-copy"></i></a>
-                                <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
-                            </form>
-                        </div>
-                        <div class="pull-left">
-                            <img src="https://unsplash.it/350/200/?random={{ random(1000) }}')" class="img-thumbnail" style="height:100px">
-                        </div>
-                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i> imagen.png</strong></h4>
-                        <h6>&nbsp;&nbsp;&nbsp;https://unsplash.it/200/200/?random={{ random(1000) }}</h6>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Video de Youtube</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="zmdi zmdi-youtube-play zmdi-hc-lg"></i></span>
+                        <input name="video" class="form-control" type="text" value="{{ derecho.video }}">
                     </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="clearfix">
-                        <div class="pull-right text-center">
-                            <form action="{{ }}" method="POST">
-                                <input type="hidden" name="id" value="{{moderador.id}}">
-                                <a href="#" class="btn btn-success" onclick="copyToClipboard('https://unsplash.it/200/200/?random={{ random(1000) }}')"><i class="zmdi zmdi-copy"></i></a>
-                                <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
-                            </form>
-                        </div>
-                        <div class="pull-left">
-                            <img src="https://unsplash.it/350/200/?random={{ random(1000) }}')" class="img-thumbnail" style="height:100px">
-                        </div>
-                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i> imagen.png</strong></h4>
-                        <h6>&nbsp;&nbsp;&nbsp;https://unsplash.it/200/200/?random={{ random(1000) }}</h6>
-                    </div>
-                </li>
-                {% if imagenes|length > 0%} {% for imagen in imagenes %}
-                <li class="list-group-item">
-                    <div class="clearfix">
-                        <div class="pull-right text-center">
-                            <form action="" method="POST">
-                                <input type="hidden" name="id" value="{{moderador.id}}">
-                                <a href="#" class="btn btn-success" onclick="copyToClipboard('###')"><i class="zmdi zmdi-copy"></i></a>
-                                <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
-                            </form>
-                        </div>
-                        <div class="pull-left">
-                            <img src="" class="img-thumbnail" style="height:100px">
-                        </div>
-                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i> ####</strong></h4>
-                        <h6>&nbsp;&nbsp;&nbsp;</h6>
-                    </div>
-                </li>
-                {% endfor %} {% else%}
-                <li class="list-group-item">
-                    <h6>No hay imagenes...</h6>
-                </li>
-                {% endif %}
+                </div>
+                <div class="alert alert-dismissible alert-info">
+                    Debe colocar el codigo que aparece en la URL del video, luego de la porcion "?v=". Por ejemplo, de <i>https://www.youtube.com/watch?v=7uulVAHwXi0</i>
+                    la porcion seria <code>7uulVAHwXi0</code><br>De ser correcto, el video tendria que mostrarse.
+                </div>
             </div>
+            <input type="text" name="secciones" value="" hidden>
+            <input type="text" name="categoria" value="1" hidden>
+            <input type="text" name="tags" value="" hidden>
+             <div class="clearfix hidden-md hidden-lg">
+                    <a href="#" class="btn btn-large btn-default ">Cancelar</a>
+                    <button type="submit" class="btn btn-lg btn-primary pull-right">Modificar derecho</button>
+                </div>
         </div>
     </div>
-</div>
+</form>
 
-{% endblock body %} {# -------------------------------------------- #} {% block scripts %}
+{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
+<script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
+<script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
+<script id="accionTemplate" type="text/template">
+    <div class="accion-container">
+        <a id="eliminar-numAccion" href="javascript:void(0)" data-idaccion='numAccion' class="eliminarAccion pull-right" style="font-size:20px;"><i class="mdi mdi-close"></i></a>
+        <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion..."></textarea>
+        <hr>
+    </div>
+</script>
 <script>
+    var numeroAccion = 2;
     $(document).ready(function() {
-        $(':file').on('fileselect', function(event, numFiles, label) {
-            var input = $(this).parents('.input-group').find(':text'),
-                log = numFiles > 1 ? numFiles + ' files selected' : label;
-            if (numFiles > 1 || numFiles == 0) {
-                alert('Por favor, seleccione solo 1 archivo');
-            } else if (numFiles == 1) {
-                input.val(log);
-            }
-        });
+        $('[name=titulo]').val('{{ derecho.titulo }}')
+        $("textarea[name=descripcion]").sceditor({
+            plugins: "bbcode",
+            emoticonsEnabled: false,
+            toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
+            height: '100',
+            width: '100%',
+            style: "{{ baseUrl() }}/assets-lpe/css/lpe.css",
+            resizeEnabled: false,
+            resizeHeight: true,
+            autoExpand: true,
+            enablePasteFiltering: true
+        })
+         autosize($('textarea'));
 
+    $(':file').on('fileselect', function(event, numFiles, label) {
+        var input = $(this).parents('.input-group').find(':text'),
+            log = numFiles > 1 ? numFiles + ' files selected' : label;
+        if(numFiles > 1 || numFiles == 0){
+            alert('Por favor, seleccione solo 1 archivo');
+        } else if(numFiles == 1){
+            input.val(log);
+        }
     });
-
+    $(window).keydown(function(event){
+    if(event.keyCode == 13) {
+      event.preventDefault();
+      return false;
+    }
+  });
+    });
+    $('input[name=video]').change(function() {
+        $("#youtubeVideo iframe").remove();
+        $('<iframe class="embed-responsive-item" id="youtubeVideo" frameborder="0" allowfullscreen></iframe>')
+            .attr("src", "https://www.youtube.com/embed/" + $(this).val())
+            .appendTo("#youtubeVideo");
+    });
     $(document).on('change', ':file', function() {
         var input = $(this),
             numFiles = input.get(0).files ? input.get(0).files.length : 1,
             label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
         input.trigger('fileselect', [numFiles, label]);
     });
-
-    function copyToClipboard(text) {
-        window.prompt("Copie haciendo: Ctrl+C, Enter", text);
-    }
-</script> {% endblock scripts %}
+   
+    $( "form" ).submit(function( event ) {
+        var secciones = [];        
+        $( "textarea[name=cuerpo]" ).each(function( index ) {
+        secciones.push($( this ).val());
+        });
+        var seccionesString = secciones.join("&&")
+        $('input[name=secciones]').val(seccionesString);
+        return true;
+});
+</script> {% endblock %}
