--- a/views/lpe/contenido/static/propuesta.twig
+++ b/views/lpe/contenido/static/propuesta.twig
@@ -11,7 +11,7 @@ Desde el Gobierno de Santa Fe se asume a la Educación como promotora de igualda
              </p>
              <p class="lead">
 
-<em>“Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación”</em> recoge los sentidos del encuentro, el diálogo, la participación y el compromiso por parte de la ciudadanía, como forma de construcción y transformación de la educación para incidir en el presente y el futuro. La propuesta plantea un debate amplio, profundo y diverso sobre la educación que la sociedad santafesina necesita.  
+“Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación” recoge los sentidos del encuentro, el diálogo, la participación y el compromiso por parte de la ciudadanía, como forma de construcción y transformación de la educación para incidir en el presente y el futuro. La propuesta plantea un debate amplio, profundo y diverso sobre la educación que la sociedad santafesina necesita.  
              </p>
         </div>
     </div>
