--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -287,10 +287,11 @@ textarea.form-control.input-lg {
 #crearDerecho{
 .titulo-derecho-background{
     background-position: center center;
+    background-size: cover;
 margin-bottom:40px;
 .overlay{
-    // background: rgba(0,0,0,0.3); 
-    padding: 80px 0;
+    background: rgba(0,0,0,0.3); 
+    padding: 100px 0;
 }
 textarea{
     color:#FFF;
@@ -334,6 +335,7 @@ textarea.accion{
 article{
 
 .titulo-derecho-background {
+    
 color: #cdbfe3;
 text-align: center;
 text-shadow: 0 1px 0 rgba(0,0,0,.1);
@@ -343,7 +345,7 @@ background-position: center center;
 h1{color:#FFF;}
 .overlay{
     background: rgba(0,0,0,0.3); 
-    padding: 80px 0;
+    padding: 100px 0;
 }
 }
 #derecho #descripcion{
